[package]
name = "cache-server-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
clap = "4.3.2"
cache-server-client = { path = "../cache-server-client" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.5"
serde_yaml = "0.9.22"
