[package]
name = "cache-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }
clap = "4.3.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
cache-server-shared = { path = "../cache-server-shared" }
